# pineapplehub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  doc.md  index.html  main.py  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
archive/: convert_pt.cpp
assets/: README.md
docs/: design_assets.md
docs/algorithms/: fruitlet_segmentation.md  fruitlet_segmentation_zh.md
docs/user_guide/: debug_interpretation.md  debug_interpretation_zh.md
js/: initializer.js
pineapplehub/: calc.py  exif.py  result.py  ui.py
src/: adaptive.rs  correction.rs  error.rs  export.rs  icons.rs  intermediate.rs  job.rs  js_interop.rs  main.rs  theme.rs  ui.rs  upload.rs  utils.rs
src/history/: model.rs  stats.rs  store.rs
src/pipeline/: fast.rs  fruitlet_counting.rs  mod.rs  roi_extraction.rs  scale_calibration.rs  unwrap_metrics.rs
src/ui/: help_overlay.rs  history_view.rs  parallel_coords.rs  preview.rs  viewer.rs
src/ui/preview/: result_img.rs
