[package]
name = "pineapplehub"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
iced = { version = "0.14", features = [
  "image",
  "markdown",
  "fira-sans",
  "webgl",
  "advanced",
  "sipper",
] }
rfd = { version = "0.17", features = [
  "file-handle-inner",
] }
image = "0.25"
imageproc = "0.26"
image-debug-utils = { git = "https://github.com/bioinformatist/image-debug-utils.git", branch = "main" }
blurhash = "0.2.3"
thiserror = "2"
sipper = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
rayon = { version = "1.10", features = ["web_spin_lock"] }
wasm-bindgen-rayon = { git = "https://github.com/RReverser/wasm-bindgen-rayon.git", features = ["no-bundler"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Document",
  "HtmlElement",
  "Element",
  "HtmlAnchorElement",
  "Blob",
  "BlobPropertyBag",
  "Url",
] }

indexed-db = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
num-traits = "0.2"
plotters = "0.3"
plotters-iced2 = "0.14"

console_error_panic_hook = "0.1"
console_log = "1.0"
futures = "0.3"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
