[tool.poetry]
name = "pineapplehub"
version = "1.0.0"
description = ""
authors = ["Yu Sun <ysun@sctmes.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10"
nicegui = "^2.4"
pillow = "^11.0"
scipy = "^1.14"

[[tool.poetry.source]]
name = "ustc"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
