[project]
name = "pineapplehub"
version = "1.1.0"
description = "一个菠萝工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nicegui>=2.11.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "scipy>=1.15.1",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
